examples/non-examples/stack-traces/error-in-bind-head.golden
Error at phase p0:
    error-in-bind-head.kl:4.22-4.33: Im-an-error
    stack trace:
    ---- in pure macro
    ---- in bind macro head
    λx. pure x
    ---- Halt
