examples/non-examples/stack-traces/error-in-bind-head.kl
#lang "prelude.kl"

(example
  (>>= (pure (error 'Im-an-error))
       (lambda (x) (pure x))))
